# AReaL

areal/infra/rpc/: serialization.py
examples/swe-bench/: README.md  agent_rl_config.py  config_swebench_sglang.yaml  config_swebench_vllm_npu.yaml  pyproject.toml  train.py
examples/swe-bench/agent/: README.md  __init__.py  _mini_path.py  areal_mini_model.py  compose_environment.py  mini_swe_bench_agent.py  prompts.py
examples/swe-bench/workflow/: README.md  __init__.py  mini_swe_bench_workflow.py  pre_build_tasks_utils.py
tests/: test_serialization.py
